--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-svg-inline": "^2.1.1",
     "sass-resources-loader": "^2.1.1",
     "webfontloader": "^1.6.28"
   },
@@ -35,6 +36,7 @@
     "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.4",
     "node-sass": "^5.0.0",
+    "raw-loader": "^4.0.2",
     "sass-loader": "^10.1.1",
     "webpack": "^5.16.0",
     "webpack-cli": "^4.4.0",
